--- a/FakeXrmEasy.9/packages.config
+++ b/FakeXrmEasy.9/packages.config
@@ -1,10 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FakeItEasy" version="3.2.0" targetFramework="net452" />
-  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.4" targetFramework="net452" />
-  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.4" targetFramework="net452" />
-  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.4" targetFramework="net452" />
-  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.0.2.4" targetFramework="net452" />
+  <package id="Microsoft.Cds.CoreAssemblies.Internal" version="4.4.723" targetFramework="net462" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.22.302111727" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net462" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net462" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net462" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net462" />
+  <package id="System.Private.DataContractSerialization" version="4.3.0" targetFramework="net462" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net462" />
+  <package id="System.Reflection.TypeExtensions" version="4.7.0" targetFramework="net462" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Runtime.Serialization.Xml" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net462" />
+  <package id="System.Security.Permissions" version="4.7.0" targetFramework="net462" />
+  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net462" />
+  <package id="System.ServiceModel.Duplex" version="4.7.0" targetFramework="net462" />
+  <package id="System.ServiceModel.Http" version="4.7.0" targetFramework="net462" />
+  <package id="System.ServiceModel.Primitives" version="4.7.0" targetFramework="net462" />
+  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net462" />
 </packages>
