--- a/FakeXrmEasy.Tests/App.config
+++ b/FakeXrmEasy.Tests/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
     <!-- Online using Office 365 -->
@@ -6,8 +6,7 @@
          connectionString="Url=https://contoso.crm.dynamics.com; Username=someone@contoso.onmicrosoft.com; Password=password; authtype=Office365" /> -->
 
     <!-- On-premises with provided user credentials -->
-    <add name="fakexrmeasy-connection"
-         connectionString="Url=http://myserver/AdventureWorksCycle; Domain=mydomain; Username=administrator; Password=password; authtype=AD" />
+    <add name="fakexrmeasy-connection" connectionString="Url=http://myserver/AdventureWorksCycle; Domain=mydomain; Username=administrator; Password=password; authtype=AD"/>
 
     <!-- On-premises using Windows integrated security -->
     <!-- <add name="Server=myserver, organization=AdventureWorksCycle"
@@ -17,4 +16,4 @@
     <!--<add name="Server=litware.com, organization=contoso, user=someone@litware.com"
          connectionString="Url=https://contoso.litware.com; Username=someone@litware.com; Password=password; authtype=IFD" />-->
   </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/></startup></configuration>
