--- a/FakeXrmEasy.Tests.9/packages.config
+++ b/FakeXrmEasy.Tests.9/packages.config
@@ -1,8 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FakeItEasy" version="3.2.0" targetFramework="net452" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.22.302111727" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
+  <package id="Microsoft.Dynamics.Sdk.Messages" version="0.0.1.7-Alpha" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.19.8" targetFramework="net462" />
+  <package id="Microsoft.Powerplatform.Cds.Client" version="0.0.1.7-Alpha" targetFramework="net462" />
+  <package id="Microsoft.Powerplatform.Cds.Client.Dynamics" version="0.0.1.7-Alpha" targetFramework="net462" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.20" targetFramework="net462" />
+  <package id="Microsoft.VisualBasic" version="10.3.0" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net462" />
+  <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net462" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net462" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net462" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net462" />
+  <package id="System.Private.DataContractSerialization" version="4.3.0" targetFramework="net462" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net462" />
+  <package id="System.Reflection.TypeExtensions" version="4.7.0" targetFramework="net462" />
+  <package id="System.Runtime.Caching" version="4.7.0" targetFramework="net462" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Runtime.Serialization.Xml" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.ProtectedData" version="4.7.0" targetFramework="net462" />
+  <package id="System.Security.Permissions" version="4.7.0" targetFramework="net462" />
+  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net462" />
+  <package id="System.ServiceModel.Duplex" version="4.7.0" targetFramework="net462" />
+  <package id="System.ServiceModel.Http" version="4.7.0" targetFramework="net462" />
+  <package id="System.ServiceModel.Primitives" version="4.7.0" targetFramework="net462" />
+  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net462" />
   <package id="xunit" version="2.0.0" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net452" />
   <package id="xunit.assert" version="2.0.0" targetFramework="net452" />
