FakeXrmEasy.Tests.9 all pass

--- a/FakeXrmEasy.Tests.9/FakeXrmEasy.Tests.9.csproj
+++ b/FakeXrmEasy.Tests.9/FakeXrmEasy.Tests.9.csproj
@@ -173,6 +173,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="CustomActivityAttributes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
