Corrected nuspec version

--- a/FakeXrmEasyCore.9.nuspec
+++ b/FakeXrmEasyCore.9.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>FakeXrmEasyCore.9</id>
-    <version>1.9.1</version>
+    <version>1.9.1-alpha</version>
     <authors>@jordimontana, Yurii Bilyk</authors>
     <owners>@jordimontana</owners>
     <licenseUrl>https://raw.githubusercontent.com/jordimontana82/fake-xrm-easy/master/LICENSE.md</licenseUrl>
